# classic-scenarios

./: README.md  pyproject.toml
.github/workflows/: publish.yml
sources/classic/scenarios/: __init__.py  exceptions.py  scenario.py
tests/: test_scenario.py
